--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "ElectronReact",
-  "version": "0.17.1",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "QLVT",
+  "productName": "Quản lí - hiệp đồng VT",
+  "version": "9.12.12",
+  "description": "Quản lí - hiệp đồng VT ",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
@@ -56,8 +56,8 @@
   },
   "main": "./app/main.prod.js",
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.develar.ElectronReact",
+    "productName": "Quản lí - hiệp đồng VT",
+    "appId": "Quản lí - hiệp đồng VT",
     "files": [
       "app/dist/",
       "app/app.html",
@@ -262,17 +262,26 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.2",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "connected-react-router": "^6.3.2",
     "core-js": "2",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.4",
     "devtron": "^1.4.0",
     "docxtemplater": "^3.14.5",
+    "dotenv": "^8.2.0",
     "electron-debug": "^2.1.0",
     "electron-log": "^3.0.4",
     "electron-updater": "^4.0.6",
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "history": "^4.9.0",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "mongoose": "^5.8.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pizzip": "^3.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -285,7 +294,8 @@
     "react-to-print": "^2.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.11"
+    "source-map-support": "^0.5.11",
+    "validator": "^12.1.0"
   },
   "devEngines": {
     "node": ">=7.x",
