--- a/package.json
+++ b/package.json
@@ -258,6 +258,7 @@
     "@date-io/date-fns": "^1.3.9",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@hot-loader/react-dom": "^16.8.6",
+    "@marshallofsound/electron-router": "^1.2.3",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.2",
